# AxiomHIve-Crytpo-Bot

./: .gitignore  Cargo.toml  README.md
axiom-cli/: Cargo.toml
axiom-cli/src/: main.rs
axiom-core/: Cargo.toml
axiom-core/src/: constants.rs  errors.rs  invariants.rs  lib.rs  signature.rs  types.rs
axiom-data/: Cargo.toml
axiom-data/src/: errors.rs  ingestion.rs  lib.rs  normalization.rs  onchain.rs  orderbook.rs
axiom-engine/: Cargo.toml
axiom-engine/src/: features.rs  lib.rs  proposer.rs  signals.rs  verifier.rs
axiom-execution/: Cargo.toml
axiom-execution/src/: executor.rs  lib.rs  routing.rs  safety.rs
axiom-oracle/: Cargo.toml
axiom-oracle/src/: alerts.rs  lib.rs  monitoring.rs  telemetry.rs
axiom-risk/: Cargo.toml
axiom-risk/src/: circuit_breaker.rs  hamiltonian.rs  lib.rs  portfolio.rs  position_sizing.rs
config/: default.toml
