[package]
name = "axiom-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "axiom-cli"
path = "src/main.rs"

[dependencies]
axiom-core = { path = "../axiom-core" }
axiom-data = { path = "../axiom-data" }
axiom-engine = { path = "../axiom-engine" }
axiom-execution = { path = "../axiom-execution" }
axiom-risk = { path = "../axiom-risk" }
axiom-oracle = { path = "../axiom-oracle" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }

